# asterconf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yaml  config.example.yaml
migrations/: 0001_call-forward.down.sql  0001_call-forward.up.sql  0002_map-call-forward-context.down.sql  0002_map-call-forward-context.up.sql
src/: db.rs  ldap.rs  main.rs  types.rs
src/agi_server/: mod.rs
src/fixtures/: call_forward.sql
src/tests/: mod.rs
src/web_server/: login.rs  mod.rs  protected.rs
src/web_server/templates/: index.html  test_template.html
templates/: call_forward_edit.html  call_forward_show.html  landing.html  login.html  new_call_forward_button.html  search_results.html
templates/static/: style.css
