[package]
name = "asterconf"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Schleucher"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "env-filter"] }
chrono = "0.4.38"
blazing_agi = { version = "0.1.0" }
blazing_agi_macros = { version = "0.1.0" }
async-trait = "0.1.81"
sha1 = "0.10.6"
rand = "0.8.5"
hex = "0.4.3"
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-login = "0.15.3"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
axum-messages = "0.6.1"
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
tower = "0.4.13"
tower-sessions = { version = "0.12.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
axum-extra = { version = "0.9.3", features = ["form"] }

[dev-dependencies]
dotenv = "0.15.0"

